# bugatti-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh  prd.json  progress.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.json
docs/public/: llms.txt
docs/public/llms/: checkpoints.txt  cli-reference.txt  commands.txt  config-reference.txt  configuration.txt  examples.txt  exit-codes.txt  getting-started.txt  includes.txt  per-test-overrides.txt  result-contract.txt  skipping.txt  test-discovery.txt  test-file-reference.txt  writing-tests.txt
docs/src/content/docs/: getting-started.mdx  index.mdx
docs/src/content/docs/examples/: index.mdx  node-express.mdx  python-flask.mdx  rust-cli.mdx  static-html.mdx
docs/src/content/docs/guides/: checkpoints.mdx  commands.mdx  configuration.mdx  includes.mdx  per-test-overrides.mdx  skipping.mdx  test-discovery.mdx  writing-tests.mdx
docs/src/content/docs/reference/: cli.mdx  config-file.mdx  exit-codes.mdx  result-contract.mdx  test-file.mdx
examples/node-express/: .gitignore  README.md  _setup.test.toml  api.test.toml  bugatti.config.toml  package.json  ui.test.toml
examples/node-express/src/: server.ts
examples/python-flask/: .gitignore  README.md  api.test.toml  app.py  bugatti.config.toml  ui.test.toml
examples/rust-cli/: .gitignore  CLAUDE.md  README.md  bugatti.config.toml  cli.test.toml
examples/rust-cli/src/: main.rs
examples/static-html/: .gitignore  README.md  bugatti.config.toml  index.html  smoke.test.toml
scripts/ralph/: progress.txt  ralph.sh
src/: claude_code.rs  cli.rs  codex.rs  command.rs  config.rs  diagnostics.rs  discovery.rs  doctor.rs  executor.rs  exit_code.rs  expand.rs  init.rs  lib.rs  main.rs  output.rs  pi.rs  progress.rs  provider.rs  report.rs  run.rs  test_file.rs  test_support.rs  update.rs
src/executor/: bootstrap.rs  checkpoint.rs  console.rs  lifecycle.rs  markers.rs  mod.rs  step.rs  tests.rs  transcript.rs  types.rs
tasks/: prd-bugatti.md
tests/: install_script.rs  pipeline_integration.rs
tests/common/: mod.rs
