[package]
name = "bugatti"
version = "0.6.0"
edition = "2021"
description = "A CLI for plain-English, agent-assisted local application verification using *.test.toml files"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3.3"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "fs", "signal"] }
semver = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
self-replace = "1"
tempfile = "3"
thiserror = "1"

[features]
# Exposes `bugatti::test_support` (shared mocks and test fixtures) to
# integration tests. Enabled via the self dev-dependency below so the
# helpers never ship in release builds.
test-support = []

[dev-dependencies]
bugatti = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["test-util"] }
